hide JS UI when no JS

--- a/views/secret.pug
+++ b/views/secret.pug
@@ -4,13 +4,14 @@ block main
 
     #container
         | This is the secret content.
-        | 
-        +outlinedButton('hide')(
-            _=`
-                init send showSecret to #model
-                on click remove the closest #container
-                then send hideSecret to #model
-            `
-            hx-get='/push/'
-            hx-swap='none'
-        )
+        if request.htmx
+            | 
+            +outlinedButton('hide')(
+                _=`
+                    init send showSecret to #model
+                    on click remove the closest #container
+                    then send hideSecret to #model
+                `
+                hx-get='/push/'
+                hx-swap='none'
+            )
