bit more consistent

--- a/views/secret.pug
+++ b/views/secret.pug
@@ -2,7 +2,7 @@ extends /../views/app
 block main
     include /pug-material-design/button
 
-    #container
+    p#container
         | This is the secret content.
         if request.htmx
             | 
