--- a/views/secret.pug
+++ b/views/secret.pug
@@ -6,8 +6,8 @@ block main
         | This is the secret content.
         if request.htmx
             | 
-            +outlinedButton('hide')(
-                _=`
+            //- _hyperscript
+            +outlinedButton('hide')(_=`
                     init send showSecret to #model
                     on click remove the closest #container
                     then send hideSecret to #model
