--- a/views/secret.pug
+++ b/views/secret.pug
@@ -2,11 +2,11 @@ extends /../views/app
 block main
     include /pug-material-design/button
 
-    .p#container
-        | This is the secret content.
+    .p#container This is the secret content.
         if request.htmx
             | 
-            //- _hyperscript
+            //- /push is from https://github.com/wscherphof/fastify-http. It
+            //- pushes the url to what follows it; here: /
             +outlinedButton('hide')(_=`
                     init send showSecret to #model
                     on click remove the closest #container
