--- a/views/secret.pug
+++ b/views/secret.pug
@@ -3,15 +3,21 @@ block main
     include /pug-material-design/button
 
     .p#container This is the secret content.
-        if request.htmx
-            | 
-            //- /push is from https://github.com/wscherphof/fastify-http. It
-            //- pushes the url to what follows it; here: /
-            +outlinedButton('hide')(_=`
-                    init send showSecret to #model
-                    on click remove the closest #container
+        | 
+        //- /push is from https://github.com/wscherphof/fastify-http. It
+        //- pushes the url to what follows it; here: /
+        +outlinedButton('hide')(
+            style="display: none"
+            _=`
+                init
+                    show -- I stay hidden when no JavaScript
+                    then send showSecret to #model
+                end
+                on click
+                    remove the closest #container
                     then send hideSecret to #model
-                `
-                hx-get='/push/'
-                hx-swap='none'
-            )
+                end
+            `
+            hx-get='/push/'
+            hx-swap='none'
+        )
