--- a/views/secret.pug
+++ b/views/secret.pug
@@ -6,18 +6,11 @@ block main
         | 
         //- /push is from https://github.com/wscherphof/fastify-http. It
         //- pushes the url to what follows it; here: /
-        +outlinedButton('hide')(
-            style="display: none"
-            _=`
-                init
-                    show -- I stay hidden when no JavaScript
-                    then send showSecret to #model
-                end
-                on click
-                    remove the closest #container
-                    then send hideSecret to #model
-                end
+        +outlinedButton('hide')(_=`
+                init send showSecret to #model
+                on click remove the closest #container
+                then send hideSecret to #model
             `
             hx-get='/push/'
             hx-swap='none'
-        )
+        ).script
