--- a/views/app.pug
+++ b/views/app.pug
@@ -1,85 +1,84 @@
 mixin form(method, action, target, push)
-    - methodOverride = method != 'GET' && method != 'POST'
-    - push = push ? 'true' : false
-    form(
-        method=methodOverride ? 'POST' : method
-        action=action
-        hx-target=target
-        hx-push-url=push
-    )&attributes(attributes)
-        if methodOverride
-            //- _method is from
-            //- https://www.npmjs.com/package/fastify-method-override
-            input(type='hidden' name='_method' value=method)
-        block
+  - methodOverride = method != "GET" && method != "POST";
+  - push = push ? "true" : false;
+  form(
+    method=methodOverride ? "POST" : method,
+    action=action,
+    hx-target=target,
+    hx-push-url=push
+  )&attributes(attributes)
+    if methodOverride
+      //- _method is from
+      //- https://www.npmjs.com/package/fastify-method-override
+      input(type="hidden", name="_method", value=method)
+    block
 
 mixin get(action, target, push)
-    +form('GET', action, target, push)&attributes(attributes)
-        block
+  +form("GET", action, target, push)&attributes(attributes)
+    block
 
 mixin put(action, target, push)
-    +form('PUT', action, target, push)&attributes(attributes)
-        block
+  +form("PUT", action, target, push)&attributes(attributes)
+    block
 
 mixin post(action, target, push)
-    +form('POST', action, target, push)&attributes(attributes)
-        block
+  +form("POST", action, target, push)&attributes(attributes)
+    block
 
 mixin delete(action, target, push)
-    +form('DELETE', action, target, push)&attributes(attributes)
-        block
+  +form("DELETE", action, target, push)&attributes(attributes)
+    block
 
 noscript
-    //- use the .script class as the opposite of the noscript element
-    style.
-        .script {
-            display: none;
-        }
+  //- use the .script class as the opposite of the noscript element
+  style.
+    .script {
+      display: none;
+    }
 
 //- pug-material design automatically provides the request object
 //- request.htmx is from https://github.com/wscherphof/fastify-htmx
 if request.htmx
-    //- for htmx-requests, skip the surrounding app, so that only the requested
-    //- partial content is rendered; see
-    //- https://pugjs.org/language/inheritance.html
-    block main
+  //- for htmx-requests, skip the surrounding app, so that only the requested
+  //- partial content is rendered; see
+  //- https://pugjs.org/language/inheritance.html
+  block main
 else
-    include /pug-material-design/button
-    //- use https://htmx.org/attributes/hx-boost/ (and forms around the buttons)
-    //- to make it work without JavaScript as well
-    #model(hx-boost='true')
-        nav
-            //- pass the HX-Init header to force request.htmx to false in this
-            //- special case
-            +get('/', '#app', true)(
-                hx-headers='{"HX-Init": true}'
-            ): +textButton('home')
-            | 
-            //- request.auth is from
-            //- https://github.com/wscherphof/fastify-cookie-auth
-            if request.auth
-                +get('/secret', 'main', true)
-                    //- _hyperscript
-                    +textButton('show secret')(_=`
-                        on showSecret from #model add @disabled
-                        on hideSecret from #model remove @disabled
-                    `)
-                | 
-                +delete('users/session')
-                    +textButton('logout')
-            else
-                +get('/users/post', 'main', true)
-                    +textButton('register')
-                | 
-                +get('/users/session', 'main', true)
-                    +textButton('login')
-            hr
-        aside
-        header
-        main
-            //- this block is what gets replaced by the extending templates of
-            //- specific URLs
-            block main
-                if request.auth
-                    p Welcome #{request.auth.email.split('@')[0]}
-        footer
+  include /pug-material-design/button
+  //- use https://htmx.org/attributes/hx-boost/ (and forms around the buttons)
+  //- to make it work without JavaScript as well
+  #model(hx-boost="true")
+    nav
+      +get("/", "#app", true)
+        +textButton("home")
+      | &nbsp;
+      //- request.auth is from
+      //- https://github.com/wscherphof/fastify-cookie-auth
+      if request.auth
+        +get("/secret", "main", true)
+          //- _hyperscript
+          +textButton("show secret")(
+            _=`
+                on showSecret from #model add @disabled
+                on hideSecret from #model remove @disabled
+            `
+          )
+        | &nbsp;
+        +delete("users/session")
+          +textButton("logout")
+      else
+        +get("/users/post", "main", true)
+          +textButton("register")
+        | &nbsp;
+        +get("/users/session", "main", true)
+          +textButton("login")
+      hr
+    aside
+    header
+    main
+      //- this block is what gets replaced by the extending templates of
+      //- specific URLs
+      block main
+        if request.auth
+          p Welcome #{ request.auth.email.split("@")[0] }
+    footer
