--- a/views/secret.pug
+++ b/views/secret.pug
@@ -1,16 +1,17 @@
 extends /../views/app
 block main
-    include /pug-material-design/button
+  include /pug-material-design/button
 
-    .p#container This is the secret content.
-        | 
-        //- /push is from https://github.com/wscherphof/fastify-http. It
-        //- pushes the url to what follows it; here: /
-        +outlinedButton('hide')(_=`
-                init send showSecret to #model
-                on click remove the closest #container
-                then send hideSecret to #model
-            `
-            hx-get='/push/'
-            hx-swap='none'
-        ).script
+  #container.p This is the secret content.
+    | &nbsp;
+    //- /push is from https://github.com/wscherphof/fastify-http. It
+    //- pushes the url to what follows it; here: /
+    +outlinedButton("hide").script(
+      _=`
+          init send showSecret to #model
+          on click remove the closest #container
+          then send hideSecret to #model
+      `,
+      hx-get="/push/",
+      hx-swap="none"
+    )
