--- a/views/users/password/put.pug
+++ b/views/users/password/put.pug
@@ -1,11 +1,11 @@
 extends /../views/app
 block main
-    include /pug-material-design/textField
-    include /pug-material-design/button
+  include /pug-material-design/textField
+  include /pug-material-design/button
 
-    +put('/users/password')
-        input(type='hidden' name='token' value=token)
-        p: +filledTextField('email', 'email', 'email', email)(disabled)
-        p: +filledTextField('password', 'password', 'password')
-        p: +filledTextField('password2', 'confirm password', 'password')
-        p: +raisedButton('save')
+  +put("/users/password")
+    input(type="hidden", name="token", value=token)
+    p: +filledTextField("email", "email", "email", email)(disabled)
+    p: +filledTextField("password", "password", "password")
+    p: +filledTextField("password2", "confirm password", "password")
+    p: +raisedButton("save")
