--- a/views/users/password/put.pug
+++ b/views/users/password/put.pug
@@ -4,7 +4,7 @@ block main
   include /pug-material-design/button
 
   +put("/users/password")
-    input(type="hidden", name="token", value=token)
+    +hidden({ token })
     p: +filledTextField("email", "email", "email", email)(disabled)
     p: +filledTextField("password", "password", "password")
     p: +filledTextField("password2", "confirm password", "password")
