--- a/views/secret.pug
+++ b/views/secret.pug
@@ -12,6 +12,6 @@ block main
           on click remove the closest #container
           then send hideSecret to #model
       `,
-      hx-get="/push/",
-      hx-swap="none"
+      hx-get='/push/',
+      hx-swap='none'
     )
