--- a/views/secret.pug
+++ b/views/secret.pug
@@ -6,7 +6,7 @@ block main
     | &nbsp;
     //- /push is from https://github.com/wscherphof/fastify-http. It
     //- pushes the url to what follows it; here: /
-    +outlinedButton("hide").script(
+    +outlinedButton('hide').script(
       _=`
           init send showSecret to #model
           on click remove the closest #container
