--- a/views/users/post.pug
+++ b/views/users/post.pug
@@ -3,6 +3,6 @@ block main
   include /pug-material-design/textField
   include /pug-material-design/button
 
-  +post("/users", "main")
-    p: +filledTextField("email", "email", "email")
-    p: +raisedButton("sign up")
+  +post('/users', 'main')
+    p: +filledTextField('email', 'email', 'email')
+    p: +raisedButton('sign up')
