--- a/views/users/session.pug
+++ b/views/users/session.pug
@@ -3,11 +3,11 @@ block main
   include /pug-material-design/textField
   include /pug-material-design/button
 
-  +post("/users/session")
-    p: +filledTextField("email", "email", "email")
-    p: +filledTextField("password", "password", "password")
+  +post('/users/session')
+    p: +filledTextField('email', 'email', 'email')
+    p: +filledTextField('password', 'password', 'password')
     .p
-      +textButton("new password")(form='change')
+      +textButton('new password')(form='change')
       | &nbsp;
-      +raisedButton("sign in")
-  +get("/users/password/change", "main", true)#change
+      +raisedButton('sign in')
+  +get('/users/password/change', 'main', true)#change
