--- a/views/secret.pug
+++ b/views/secret.pug
@@ -1,12 +1,12 @@
 extends /../views/app
-block main
-  include /pug-material-design/button
 
+block main
   #container.p This is the secret content.
     | &nbsp;
     //- /push is from https://github.com/wscherphof/fastify-http. It
     //- pushes the url to what follows it; here: /
-    +outlinedButton('hide').script(
+    +mdc-button('hide').script(
+      outlined,
       _=`
           init send showSecret to #model
           on click remove the closest #container
